workshop-app/k8s-argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-app
  namespace: aks-workshop-argo
spec:
  selector:
    app: workshop-app
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  externalTrafficPolicy: Local
