workshop-app/k8s-argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-app
  namespace: aks-workshop-argo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: workshop.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workshop-app
                port:
                  number: 80
